--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="apple-touch-icon" href="/favicon.png">
 
 <title>TEKUNOPPO SCHOOL </title>
-<meta name="google-site-verification" content="vhCmHUGmC1V2JQxmaCR8-lIbqTxBHmcvWChx5JZop_w" />
+<meta name="google-site-verification" content="HM9FPzGjH-SoyRHM5_MJ92521-0opBtlS1iwKuPFjDQ" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="ここにサイト説明を入れます">
 <link rel="stylesheet" href="css/style.css">
@@ -33,7 +33,7 @@
 <li><a href="#plan">料金プラン</a></li>
 <li><a href="#faq">よく頂く質問</a></li>
 <li><a href="#flow">入塾までの流れ</a></li>
-<li><a href="https://reserva.be/tekuppo/aikotoba">お問い合わせ</a></li>
+<li><a href="https://reserva.be/tekunoppo/">お問い合わせ</a></li>
 </ul>
 </nav>
 
@@ -55,7 +55,7 @@
 	  </div>
 
 <div class="btn">
-<p><a href="https://reserva.be/tekuppo/aikotoba"><i class="fa-regular fa-envelope"></i>お問い合わせ</a></p>
+<p><a href="https://reserva.be/tekunoppo/"><i class="fa-regular fa-envelope"></i>お問い合わせ</a></p>
 <p><a href="#"><i class="fa-regular fa-file-lines"></i>資料請求</a></p>
 </div>
 
@@ -452,7 +452,7 @@
 <div class="list image1">
 <div class="text">
 <h4><span class="sub-text">お問い合わせ</span><span class="main-text">Contact</span></h4>
-<p class="btn1"><a href="https://reserva.be/tekuppo/aikotoba">お問い合わせフォーム</a></p>
+<p class="btn1"><a href="https://reserva.be/tekunoppo/">お問い合わせフォーム</a></p>
 </div>
 </div>
 
@@ -598,7 +598,7 @@
 <li><a href="#plan">料金プラン</a></li>
 <li><a href="#faq">よく頂く質問</a></li>
 <li><a href="#flow">入塾の流れ</a></li>
-<li><a href="https://reserva.be/tekuppo/aikotoba">お問い合わせ</a></li>
+<li><a href="https://reserva.be/tekunoppo/">お問い合わせ</a></li>
 </ul>
 
 
@@ -649,7 +649,7 @@
 <li><a href="#plan">料金プラン</a></li>
 <li><a href="#faq">よく頂く質問</a></li>
 <li><a href="#flow">入塾までの流れ</a></li>
-<li><a href="https://reserva.be/tekuppo/aikotoba">お問い合わせ</a></li>
+<li><a href="https://reserva.be/tekunoppo/">お問い合わせ</a></li>
 </ul>
 </nav>
 
