--- a/index.html
+++ b/index.html
@@ -90,21 +90,21 @@
 <div class="list up">
 <figure class="icon"><img src="images/icon1.png" alt=""></figure>
 <h4><span class="marker">実践的なプログラミング経験！</span></h4>
-<p>全講師が工業大学生だからこそできる、実際に役に立つプログラミング経験が詰める！なかには全国優勝経験者や学会発表を行った講師も！</p>
+<p>全講師が工業系大学の学生だからこそ実現できる、論理的かつ実用的な指導！全国優勝や学会発表の経験を持つ講師も在籍し、質の高い学びを提供！</p>
 <span class="num">01</span>
 </div>
 
 <div class="list up">
 <figure class="icon"><img src="images/icon2.png" alt=""></figure>
 <h4><span class="marker">利益を重視しないからこそ出せる低価格！</span></h4>
-<p>我々は、プログラミング学習の普及と教育格差の是正のために行っているため、利益を重視していません！だからこそ提示できる圧倒的低価格！</p>
+<p>私たちは、プログラミング学習の普及を第１の目的としているため、利益を追求していません。そのため、圧倒的な低価格を実現しています！</p>
 <span class="num">02</span>
 </div>
 
 <div class="list up">
 <figure class="icon"><img src="images/icon3.png" alt=""></figure>
-<h4><span class="marker">気軽に応募できる様々なプラン</span></h4>
-<p>最短三か月からのプランがあるため、気軽に応募できます！</p>
+<h4><span class="marker">選べる多彩なプラン</span></h4>
+<p>気軽に始められる3か月プランから、じっくり取り組める6か月プランまで、あなたにぴったりな学び方を提案します</p>
 <span class="num">03</span>
 </div>
 
@@ -266,20 +266,26 @@
 <tr>
 <td>授業内容</td>
 <td>スクラッチでのゲーム開発チュートリアル</td>
-<td>スクラッチで実際にゲームを作ってみる</td>
+<td>スクラッチで実際にゲームを１本作ってみる</td>
 <td>実際にプログラム言語を使ったプログラム</td>
+</tr>
+<tr>
+<td>使用教材</td>
+<td>ビジュアルプログラミング</td>
+<td>ビジュアルプログラミング</td>
+<td>テキストベースプログラミング</td>
 </tr>
 
 <tr>
 <td>最終目標</td>
 <td>プログラムの楽しさを知ってもらう</td>
-<td>一人で実際にプログラムができるようになる</td>
-<td>実際のプログラム開発ができるようにする</td>
+<td>１人でゲームを作れるようになる</td>
+<td>実際のプログラム開発ができるようになる</td>
 </tr>
 <tr>
 <td>こんな人に<br>おすすめ</td>
 <td>まずプログラムの楽しさに触れてみたい人</td>
-<td>プログラムの経験を得たい人</td>
+<td>プログラムの経験をしてみたい人</td>
 <td>実際のプログラム技能を得たい人</td>
 </tr>
 </table>
@@ -305,15 +311,14 @@
 
 <dl class="faq">
 
-<dt class="openclose">将来プログラマーにならなくても、プログラミングスクールに通う意味はあるの？</dt>
+<dt class="openclose">将来プログラマーになるつもりがなくても、プログラミングスクールに通う意味はあるの？</dt>
 <dd>あります！<br>
-	プログラミングスクールに入るメリットはプログラムの経験、知識が身につくことはもちろん！<br>
-	それだけでなくプログラムを学ぶと論理的思考が鍛えらます。<br>
-	その思考力がプログラム以外の学習や将来の仕事にも大いに役立つと我々は考えています！</dd>
+	プログラミングスクールで得られるのは、プログラムの経験や知識はもちろん！<br>
+プログラミングを学ぶことで、論理的思考力が鍛えられます。この思考力はプログラム以外の学習や将来の仕事にも大いに役立つと私たちは考えています。</dd>
 
 <dt class="openclose">オンラインだと準備が大変じゃない？</dt>
 <dd>そんなことはありません！<br>
-	準備には我々が丁寧に説明させていただきますし、そこまで難しい準備は必要ないため、問題なく準備できると考えています。</dd>
+	準備については私たちが丁寧にサポートしますし、特別に難しい準備は必要ないため、問題なく始められると考えています。</dd>
 
 <dt class="openclose">お金は毎月払うの？それともまとめて払うの？
 </dt>
@@ -344,14 +349,14 @@
 <div class="list up">
 <div class="text">
 <h4><i class="fa-solid fa-ear-listen"></i>体験授業・説明会の申し込み</h4>
-<p>申し込みフォームからいただいたメールアドレス宛に体験授業・説明会予定日をお送りしますので、その中から都合の良い日をお選びください。</p>
+<p>申し込みフォームからご希望の日程をお選びください、体験授業・説明会の詳細な進め方については、メールでご案内いたします。</p>
 </div>
 </div>
 
 <div class="list up">
 <div class="text">
 <h4><i class="fa-solid fa-palette"></i>体験授業・説明会の実施</h4>
-<p>オンラインにて体験授業・説明会を実施いたします。お子さんに実際に授業を受けてもらい、そのご保護者向けの説明会を実施いたします。その後、当塾への入塾申し込み書類を郵送にてお送りいたします。その際に、空いている日程を確認し、毎月の塾の日程を決定いたします。</p>
+<p>オンラインにて体験授業・説明会を実施します。お子さんに実際に授業を受けてもらい、その後。保護者向けの説明会を行います。説明会終了後、オンライン登録フォームをメールで送信いたしますので、そちらから入塾手続きをお願いいたします。</p>
 </div>
 </div>
 
@@ -551,7 +556,7 @@
 <h2 class="color-check">※テンプレートのご利用前に必ずお読み下さい</h2>
 
 <h3>利用規約のご案内</h3>
-<p>このテンプレートは、<a href="https://template-party.com/">Template Party</a>にて無料配布している『WEB制作・システム開発サイト向け（ランディングページタイプ） 無料ホームページテンプレート tp_biz63』です。必ずダウンロード先のサイトの<a href="https://template-party.com/read.html">利用規約</a>をご一読の上でご利用下さい。</p>
+<p>このテンプレートは、<a href="https://template-party.com/">Template Party</a>にて無料配布している『WEB制作・システム開発サイト向け（ランディングページタイプ） 無料ホームページテンプレート tp_biz63』です。必ずダウンロード先のサイトの<a href="https://template-party.com/read.html">利用規約</a>をご１読の上でご利用下さい。</p>
 <h3>HP最下部の著作表示『Web Design:Template-Party』は無断で削除しないで下さい。</h3>
 <p>わざと見えなく加工する事も禁止です。</p>
 <h3>下部の著作を外したい場合は</h3>
