--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <li><a href="#plan">料金プラン</a></li>
 <li><a href="#faq">よく頂く質問</a></li>
 <li><a href="#flow">入塾までの流れ</a></li>
-<li><a href="https://reserva.be/tekunoppo/">お問い合わせ</a></li>
+<li><a href="https://reserva.be/tekunoppo/">申し込みフォーム</a></li>
 </ul>
 </nav>
 
@@ -55,7 +55,7 @@
 	  </div>
 
 <div class="btn">
-<p><a href="https://reserva.be/tekunoppo/"><i class="fa-regular fa-envelope"></i>お問い合わせ</a></p>
+<p><a href="https://reserva.be/tekunoppo/"><i class="fa-regular fa-envelope"></i>申し込みフォーム</a></p>
 <p><a href="#"><i class="fa-regular fa-file-lines"></i>資料請求</a></p>
 </div>
 
@@ -447,17 +447,17 @@
 
 
 
-<!--▼▼▼▼▼ここから「問い合わせ＆資料請求」-->
+<!--▼▼▼▼▼ここから「申し込みフォーム＆資料請求」-->
 <section class="padding0">
 
-<h2 class="dn">問い合わせ＆資料請求</h2>
+<h2 class="dn">申し込みフォーム＆資料請求</h2>
 
 <div class="list-c2">
 
 <div class="list image1">
 <div class="text">
-<h4><span class="sub-text">お問い合わせ</span><span class="main-text">Contact</span></h4>
-<p class="btn1"><a href="https://reserva.be/tekunoppo/">お問い合わせフォーム</a></p>
+<h4><span class="sub-text">申し込みフォーム</span><span class="main-text">Contact</span></h4>
+<p class="btn1"><a href="https://reserva.be/tekunoppo/">申し込みフォーム</a></p>
 </div>
 </div>
 
@@ -472,7 +472,7 @@
 <!--/.list-c2-->
 
 </section>
-<!--▲▲▲▲▲ここまで「問い合わせ＆資料請求」-->
+<!--▲▲▲▲▲ここまで「申し込みフォーム＆資料請求」-->
 
 
 
@@ -603,7 +603,7 @@
 <li><a href="#plan">料金プラン</a></li>
 <li><a href="#faq">よく頂く質問</a></li>
 <li><a href="#flow">入塾の流れ</a></li>
-<li><a href="https://reserva.be/tekunoppo/">お問い合わせ</a></li>
+<li><a href="https://reserva.be/tekunoppo/">申し込みフォーム</a></li>
 </ul>
 
 
@@ -654,7 +654,7 @@
 <li><a href="#plan">料金プラン</a></li>
 <li><a href="#faq">よく頂く質問</a></li>
 <li><a href="#flow">入塾までの流れ</a></li>
-<li><a href="https://reserva.be/tekunoppo/">お問い合わせ</a></li>
+<li><a href="https://reserva.be/tekunoppo/">申し込みフォーム</a></li>
 </ul>
 </nav>
 
