--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <li><a href="#plan">料金プラン</a></li>
 <li><a href="#faq">よく頂く質問</a></li>
 <li><a href="#flow">入塾までの流れ</a></li>
-<li><a href="https://reserva.be/tekunoppo/">申し込みフォーム</a></li>
+<li><a href="https://reserva.be/tekunoppo/">お申し込みはこちら</a></li>
 </ul>
 </nav>
 
@@ -55,8 +55,8 @@
 	  </div>
 
 <div class="btn">
-<p><a href="https://reserva.be/tekunoppo/"><i class="fa-regular fa-envelope"></i>申し込みフォーム</a></p>
-<p><a href="#"><i class="fa-regular fa-file-lines"></i>資料請求</a></p>
+<p><a href="https://reserva.be/tekunoppo/"><i class="fa-regular fa-envelope"></i>お申し込みはこちら</a></p>
+<!-- <p><a href="#"><i class="fa-regular fa-file-lines"></i>資料請求</a></p>　-->
 </div>
 
 </div>
@@ -450,21 +450,21 @@
 <!--▼▼▼▼▼ここから「申し込みフォーム＆資料請求」-->
 <section class="padding0">
 
-<h2 class="dn">申し込みフォーム＆資料請求</h2>
+<h2 class="dn">申し込みフォーム</h2>
 
 <div class="list-c2">
 
 <div class="list image1">
 <div class="text">
 <h4><span class="sub-text">申し込みフォーム</span><span class="main-text">Contact</span></h4>
-<p class="btn1"><a href="https://reserva.be/tekunoppo/">申し込みフォーム</a></p>
+<p class="btn1"><a href="https://reserva.be/tekunoppo/">お申し込みはこちら</a></p>
 </div>
 </div>
 
 <div class="list image2">
 <div class="text">
-<h4><span class="sub-text">資料請求</span><span class="main-text">Request</span></h4>
-<p class="btn1"><a href="#">資料請求フォーム</a></p>
+<!-- <h4><span class="sub-text">資料請求</span><span class="main-text">Request</span></h4>
+<p class="btn1"><a href="#">資料請求フォーム</a></p>-->
 </div>
 </div>
 
