--- a/index.html
+++ b/index.html
@@ -349,7 +349,10 @@
 <div class="list up">
 <div class="text">
 <h4><i class="fa-solid fa-ear-listen"></i>体験授業・説明会の申し込み</h4>
-<p>申し込みフォームからご希望の日程をお選びください、体験授業・説明会の詳細な進め方については、メールでご案内いたします。</p>
+<p>申し込みフォームからご希望の日程をお選びください、体験授業・説明会の詳細な進め方については、メールでご案内いたします。
+	<p><a href="https://reserva.be/tekunoppo/"><i class="fa-regular fa-envelope"></i>お申し込みはこちら</a></p>
+
+</p>
 </div>
 </div>
 
