--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link rel="apple-touch-icon" href="/favicon.png">
 
 <title>TEKUNOPPO SCHOOL </title>
+<meta name="google-site-verification" content="vhCmHUGmC1V2JQxmaCR8-lIbqTxBHmcvWChx5JZop_w" />
 <meta name="google-site-verification" content="HM9FPzGjH-SoyRHM5_MJ92521-0opBtlS1iwKuPFjDQ" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="ここにサイト説明を入れます">
