--- a/index.html
+++ b/index.html
@@ -588,15 +588,16 @@
 <footer>
 
 <div>
+	
 <p class="logo"><img src="images/logo.png" alt="TEKUNOPPO SCHOOL"></p>
-<ul class="icons">
+<!--<ul class="icons">
 <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
 <li><a href="#"><i class="fab fa-line"></i></a></li>
 <li><a href="#"><i class="fab fa-youtube"></i></a></li>
 <li><a href="#"><i class="fab fa-instagram"></i></a></li>
 </ul>
-<p>東京都XXX区XXXXビル１F<br>
-03-0000-0000</p>
+<p><br>
+</p>-->
 <small>Copyright&copy; TEKUNOPPO SCHOOL All Rights Reserved.</small>
 </div>
 
@@ -662,8 +663,6 @@
 </ul>
 </nav>
 
-<p>ここのブロックは、htmlの下の方にある&lt;div id=&quot;menubar&quot;&gt;で編集できます。<br>
-ヘッダーのメニューとは別のブロックになるので注意して下さい。</p>
 
 </div>
 <!--/#menubar-->
